Fixed IE spillover

--- a/public/app/index.scss
+++ b/public/app/index.scss
@@ -163,6 +163,10 @@
         .special-ie-fix {
             display: block;
         }
+        md-toast {
+            display: block;
+            height: 100%;
+        }
     }
     @media only screen and (max-width: 1000px) {
         .medium-ie-fix {
